tests/ui/fail/log_cfg_unused.stderr
error: unused variable: `c`
 --> $DIR/log_cfg_unused.rs:8:9
  |
8 |     let c = 42;
  |         ^ help: if this is intentional, prefix it with an underscore: `_c`
  |
note: the lint level is defined here
 --> $DIR/log_cfg_unused.rs:2:9
  |
2 | #![deny(unused_variables)]
  |         ^^^^^^^^^^^^^^^^
